<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/brown_color"
        android:minHeight="?attr/actionBarSize"
        android:paddingStart="0dp"
        android:paddingTop="5dp"
        app:layout_constraintEnd_toStartOf="@id/constraintLayout"
        android:paddingEnd="2dp"
        android:paddingBottom="5dp"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:flow_horizontalAlign="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="69dp"
            android:layout_height="56dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/dp_for_farmer"
            android:src="@drawable/tata4"
            app:layout_constraintEnd_toStartOf="@+id/textView1"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:backgroundTint="#FFFFFF"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/id"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/image" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:backgroundTint="#FFFFFF"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/frmid"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="271dp"
        android:layout_height="71dp"
        android:layout_margin="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="No"
        android:ems="10"
        android:gravity="bottom"
        android:inputType="text"
        android:text="@string/crop_name"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/white_button"
        android:layout_marginEnd="5dp"
        android:text="@string/submit"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextText2"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="590dp"
        android:background="@drawable/white_button"
        android:padding="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="1.0">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view1"
            android:layout_width="185dp"
            android:layout_height="174dp"
            android:layout_margin="4dp"
            app:cardBackgroundColor="@color/humiditycol"
            app:layout_constraintBottom_toTopOf="@+id/card_view3"
            app:layout_constraintEnd_toStartOf="@+id/card_view2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_gravity="start|bottom"
                android:background="@color/white"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/humidity"
                android:textColor="@color/black"
                tools:layout_editor_absoluteX="46dp"
                tools:layout_editor_absoluteY="268dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/_00"
                android:textAlignment="center"
                android:textSize="55sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="end|bottom"
                android:background="@color/white"
                android:padding="10dp"
                android:textSize="20sp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view2"
            android:layout_width="185dp"
            android:layout_height="174dp"
            android:layout_margin="4dp"
            android:backgroundTint="@color/orange_color"
            app:layout_constraintBottom_toTopOf="@id/card_view4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/card_view1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:background="@color/white"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/soil_moisture"
                android:textColor="@color/black"
                tools:layout_editor_absoluteX="46dp"
                tools:layout_editor_absoluteY="268dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch2"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="end|bottom"
                android:background="@color/white"
                android:padding="10dp"
                android:textSize="20sp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/_00"
                android:textAlignment="center"
                android:textSize="55sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view3"
            android:layout_width="185dp"
            android:layout_height="174dp"
            android:layout_margin="4dp"
            android:backgroundTint="@color/pink_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/card_view4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view1"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="299dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:background="@color/white"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/temperature"
                android:textColor="@color/black"
                tools:layout_editor_absoluteX="46dp"
                tools:layout_editor_absoluteY="268dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="end|bottom"
                android:background="@color/white"
                android:padding="10dp"
                android:textSize="20sp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/_00"
                android:textAlignment="center"
                android:textSize="55sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view4"
            android:layout_width="185dp"
            android:layout_height="174dp"
            android:layout_margin="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/card_view3"
            app:layout_constraintTop_toBottomOf="@+id/card_view2">

            <TextView
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:background="@color/white"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/light"
                android:textColor="@color/black"
                tools:layout_editor_absoluteX="46dp"
                tools:layout_editor_absoluteY="268dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch4"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="end|bottom"
                android:background="@color/white"
                android:padding="10dp"
                android:textSize="20sp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/_00"
                android:textAlignment="center"
                android:textSize="55sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button2"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/ocean_button"
            android:text="@string/signout"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view3"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>